syntax = "proto3";
option go_package = "github.com/paysuper/postmark-sender/pkg";
package pkg;

message PayloadHeader {
    //@inject_tag: json:"Name"
    string name = 1;
    //@inject_tag: json:"Value"
    string value = 2;
}

message PayloadAttachment {
    //@inject_tag: json:"Name"
    string name = 1;
    //@inject_tag: json:"Content"
    string content = 2;
    //@inject_tag: json:"ContentType"
    string content_type = 3;
}

message Payload {
    //@inject_tag: json:"TemplateId,omitempty"
    int32 template_id = 1;
    //@inject_tag: json:"TemplateAlias,omitempty"
    string template_alias = 2;
    //@inject_tag: json:"TemplateModel"
    map<string, string> template_model = 3;
    //@inject_tag: json:"InlineCss"
    bool inline_css = 4;
    //@inject_tag: json:"From"
    string from = 5;
    //@inject_tag: json:"To"
    string to = 6;
    //@inject_tag: json:"Cc,omitempty"
    string cc = 7;
    //@inject_tag: json:"Bcc,omitempty"
    string bcc = 8;
    //@inject_tag: json:"Tag,omitempty"
    string tag = 9;
    //@inject_tag: json:"ReplyTo,omitempty"
    string reply_to = 10;
    //@inject_tag: json:"Headers,omitempty"
    repeated PayloadHeader headers = 11;
    //@inject_tag: json:"TrackOpens,omitempty"
    bool track_opens = 12;
    //@inject_tag: json:"TrackLinks,omitempty"
    string track_links = 13;
    //@inject_tag: json:"Attachments,omitempty"
    repeated PayloadAttachment attachments = 14;
    //@inject_tag: json:"Metadata,omitempty"
    map<string, string> metadata = 15;
}